--- a/app/views/listing_nodes/_comparison.html.haml
+++ b/app/views/listing_nodes/_comparison.html.haml
@@ -1,6 +1,6 @@
 -listing_node = comparison
 =link_to_function(listing_node.comparison, "this.hide(); $('#{listing_node.key}_comparator_form').show();", :class=>"icon im-filter")
-=form_remote_tag(:url=>{:controller=>:listing_nodes, :action=>:update, :id=>listing_node.id, :type=>"comparison"}, :update=>"#{listing_node.key}_comparator", :html=>{:id=>"#{listing_node.key}_comparator_form", :style=>"display: none;"}) do
+=form_remote_tag(:url=>{:controller=>:listing_nodes, :action=>:update, :id=>listing_node.id, :type=>"comparison"}, :method=>:put, :update=>"#{listing_node.key}_comparator", :html=>{:id=>"#{listing_node.key}_comparator_form", :style=>"display: none;"}) do
   =select_tag("comparator", options_for_select(listing_node.comparators, listing_node.condition_operator))
   -if listing_node.sql_type.to_s == "date"
     =calendar_field_tag("comparison_value", listing_node.condition_value||listing_node.default_comparison_value)
