--- a/app/views/operations/unvalidateds.html.haml
+++ b/app/views/operations/unvalidateds.html.haml
@@ -1,6 +1,6 @@
 -if @operations.size > 0
   =form_tag do
-    =kame :unvalidated_operations
+    =list :unvalidateds
     .actions
       =link_to tg(:previous), :action=>:index
       =submit_tag(tc('validate'), :action=>:unvalidated_operations)
