--- a/app/views/settings/edit.html.haml
+++ b/app/views/settings/edit.html.haml
@@ -1,4 +1,4 @@
-=form_tag(nil, {:class=>"vbox flex", :style=>'overflow:none'}) do
+=form_tag({:action=>:update}, {:class=>"vbox flex", :style=>'overflow:none', :method=>:put}) do
   .fields.flex
     -if @my_company.preferences.find(:all, :conditions=>["record_value_type = 'Sequence' AND record_value_id IS NULL"]).size > 0
       =toolbar do |t|
