--- a/app/views/shared/_side.html.haml
+++ b/app/views/shared/_side.html.haml
@@ -6,6 +6,17 @@
       -for url in menu[path[1]]||[]
         =li_link_to(t("actions.#{url[:controller]}.#{url[:action]}"), url, :class=>(:current if path[2] == "#{url[:controller]}::#{url[:action]}"))
 
+
+-if session[:history].is_a?(Array) and not session[:history].size.zero?
+  .module.menu
+    %h2=tl("lasts_pages")
+    %ul
+      -for page in session[:history][0..4]
+        %li
+          -title = page[:title]
+          -title =tl("menus.#{page[:reverse][0]}")+" &ndash; "+title if page[:reverse].is_a?(Array) and page[:reverse][0]
+          =link_to(title, page[:url], :class=>(:current if request.url == page[:url]))
+
 .module.help.flex
   %h2=tl("contextual_help")
   #help.flex=render :partial=>"help/search", :object=>@article
