--- a/app/views/shared/_top.html.haml
+++ b/app/views/shared/_top.html.haml
@@ -11,10 +11,19 @@
 -if @current_user
   -rm = reverse_menus
   .menu-bar
-    -#=link_to(tl("menus.home"), {:controller=>:dashboards}, :class=>"home#{' current' if controller_name=='dashboards' and action_name=='index'}")
-    -for menu, submenus in menus
-      =link_to_if(rm[0] != menu, tl("menus.#{menu}"), last_page(menu), :class=>menu) do |name|
-        -link_to(name, dashboard_url(:action=>menu), :class=>"#{menu} current")
+    %ul
+      -for menu, submenus in menus
+        %li     
+          -name = tl("menus.#{menu}")
+          -if rm[0] != menu
+            =link_to(name, last_page(menu), :class=>"menu #{menu}")
+            %ul
+              -for submenu, items in submenus
+                %li=link_to(tl("menus.submenus.#{submenu}"), items[0])
+          -else
+            =link_to(name, dashboard_url(:action=>menu), :class=>"menu #{menu} current")
+          -#=link_to_if(rm[0] != menu, tl("menus.#{menu}"), last_page(menu), :class=>menu) do |name|
+            -link_to(name, dashboard_url(:action=>menu), :class=>"#{menu} current")
   .submenu-bar
     -for submenu, items in menus[rm[0]]||[]
       =link_to_if(rm[1] != submenu, tl("menus.submenus.#{submenu}"), items[0]) do |name| # , :default=>["actions.#{submenu}.index".to_sym, "labels.menu.#{submenu}".to_sym]
