--- a/app/views/bank_statements/show.html.haml
+++ b/app/views/bank_statements/show.html.haml
@@ -5,7 +5,7 @@
 
 =attributes_list(@bank_statement) do |l|
   -l.attribute(:number)
-  -l.attribute(:cash, :url=>{:action=>:cash, :controller=>:finances})
+  -l.attribute(:cash, :url=>true)
   -l.attribute(:credit)
   -l.attribute(:debit)
   -l.attribute(:started_on)
