--- a/app/views/document_templates/index.html.haml
+++ b/app/views/document_templates/index.html.haml
@@ -1,6 +1,6 @@
 -# Eclated automatically (2011-06-08)
 =toolbar do |t|
   -t.link :new
-  -t.link :load, {}, :confirm=>tg(:are_you_sure)
+  -t.link :load, {}, :confirm=>tg(:are_you_sure), :method=>:post
 
 =list
