--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -7,7 +7,7 @@
   -l.attribute :code
   -l.attribute :code2
   -l.attribute :ean13
-  -l.attribute :category, :url=>{:action=>:product_category}
+  -l.attribute :category, :url=>true
   -l.attribute :unit, :label=>:label
   -l.attribute :weight
   -l.attribute :active
