--- a/app/views/transports/show.html.haml
+++ b/app/views/transports/show.html.haml
@@ -1,6 +1,5 @@
--# Eclated automatically (2011-06-08)
 =toolbar do |t|
-  -t.print :transport, :id=>@transport.id
+  -t.print_transport @transport
 
 %h2=tc :deliveries
 =list :deliveries
