--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -16,15 +16,15 @@
     -f.title User.human_attribute_name("employed")
     -f.field :user, :employment
     -f.field :user, :commercial
-    -# f.field :user, :profession_id,  :choices=>{:reflection=>:professions}, :new=>{:action => :profession_create} 
-    -f.field :user, :department_id, :choices=>{:reflection=>:departments}, :new=>{:controller => :company, :action => :department_create} 
-    -f.field :user, :establishment_id, :choices=>{:reflection=>:establishments}, :new => {:controller => :company, :action => :establishment_create}
+    -# f.field :user, :profession_id,  :choices=>{:reflection=>:professions}, :new=>:profession
+    -f.field :user, :department_id, :choices=>{:reflection=>:departments}, :new=>:department
+    -f.field :user, :establishment_id, :choices=>{:reflection=>:establishments}, :new =>:establishment
 
 -user_role_id = nil 
 #rights-conf
   =formalize(:id=>:show_rights) do |f|
     -f.title :rights
-    -user_role_id = f.field :user, :role_id, :choices=>{:reflection=>:roles}, :new=>{:action=>:role_create}
+    -user_role_id = f.field :user, :role_id, :choices=>{:reflection=>:roles}, :new=>:role
     -#f.field :user, :reduction_percent
     -#f.field :user, :free_price
     -#f.field :user, :credits
@@ -41,4 +41,4 @@
   displayRights();
   displayEmployee();
 
-=observe_field(user_role_id, :url=>{:mode=>:rights}, :update=>:rights, :frequency => 0.25 , :with=>"user_role_id", :method=>:get)
+=observe_field(user_role_id, :url=>{:action=>:new, :mode=>:rights}, :update=>:rights, :frequency => 0.25 , :with=>"user_role_id", :method=>:get)
