--- a/app/views/dashboards/_general.html.haml
+++ b/app/views/dashboards/_general.html.haml
@@ -14,5 +14,6 @@
         %ul
           -for menuitem in menuitems
             =li_link_to(t("actions.#{menuitem[:controller]}.#{menuitem[:action]}"), menuitem)
-  
+-# Test bug HAML
+  -Use haml 3.0.25 if it don't work  
   
