--- a/app/views/deposits/show.html.haml
+++ b/app/views/deposits/show.html.haml
@@ -1,16 +1,16 @@
 -# Eclated automatically (2011-06-08)
 =toolbar do |t|
-  -t.update @deposit
-  -t.print :deposit, :p0=>@deposit.id
+  -t.edit @deposit
+  -t.print_deposit @deposit
 
 =attributes_list(@deposit) do |l|
   -l.attribute :number
-  -l.attribute :cash, :url=>{:controller=>:finances, :action=>:cash}
-  -l.attribute :mode # , :url=>{:controller=>:finances, :action=>:incoming_payment_mode}
+  -l.attribute :cash, :url=>true
+  -l.attribute :mode # , :url=>true
   -l.attribute :payments_count
   -l.attribute :responsible
   -l.attribute :comment
-  -l.attribute :journal_entry, :url=>{:controller=>:accountancy, :action=>:journal_entry}
+  -l.attribute :journal_entry, :url=>true
 
 %h2=Deposit.human_attribute_name("payments")
 =list :payments
